<resources>
    <string name="modify_review">리뷰 수정하기</string>
    <string name="review_written_by_me">내가 작성한 리뷰</string>
    <string name="complete">완료</string>
    <string name="modify">수정</string>
    <string name="cancel">취소</string>
    <string name="delete">삭제</string>
    <string name="see_more">더보기</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>