<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gs_1"
    tools:context=".ReviewDetailActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="컴포즈커피 춘천점"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cafe_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendard_regular"
        android:text="강원도 춘천시 충열로 1-16 1층"
        android:textColor="#565656"
        android:layout_marginBottom="10dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginTop="20dp"
        android:background="@color/gs_3"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/back_arrow"
        app:layout_constraintBottom_toTopOf="@+id/line1"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/line1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/pretendard_regular"
                android:text="2025.02.21"
                android:textColor="#5A5A5A"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/my_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/pretendard_regular"
                android:text="@string/review_written_by_me"
                android:textColor="@color/text_selected"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/date" />

            <ImageView
                android:id="@+id/profile"
                android:layout_width="78dp"
                android:layout_height="78dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="@id/date"
                app:layout_constraintTop_toBottomOf="@+id/date"
                app:srcCompat="@drawable/review_profile_circle" />

            <TextView
                android:id="@+id/nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/pretendard_semibold"
                android:text="닉네임"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/rating"
                app:layout_constraintStart_toEndOf="@+id/profile" />

            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="360dp"
                android:layout_marginTop="7dp"
                app:layout_constraintTop_toBottomOf="@id/profile"
                app:srcCompat="@drawable/review_photo_shape" />

            <TextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:ellipsize="end"
                android:fontFamily="@font/pretendard_regular"
                android:maxLines="5"
                android:text="@string/lorem"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/photo" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="7dp"
                android:text="@string/see_more"
                android:textColor="#D9D9D9"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/content"
                app:layout_constraintEnd_toEndOf="@id/content"
                tools:visibility="visible" />

            <Button
                android:id="@+id/modify_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:background="@drawable/green_stroke_button"
                android:fontFamily="@font/pretendard_bold"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:paddingEnd="15dp"
                android:paddingBottom="5dp"
                android:text="@string/modify"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/cancel_button"
                app:layout_constraintTop_toTopOf="@id/cancel_button" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/red_stroke_button"
                android:fontFamily="@font/pretendard_bold"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:paddingEnd="15dp"
                android:paddingBottom="5dp"
                android:text="@string/delete"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/content"
                app:layout_constraintTop_toBottomOf="@+id/content" />

            <LinearLayout
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/photo"
                app:layout_constraintStart_toStartOf="@id/nickname">

                <ImageView
                    android:id="@+id/star1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/vacant_star" />

                <ImageView
                    android:id="@+id/star2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/vacant_star" />

                <ImageView
                    android:id="@+id/star3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/vacant_star" />

                <ImageView
                    android:id="@+id/star4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/vacant_star" />

                <ImageView
                    android:id="@+id/star5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/vacant_star" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>