<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gs_1"
    tools:context=".ReviewModifyActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/modify_review"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginTop="20dp"
        android:background="@color/gs_3"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/back_arrow"
        app:layout_constraintBottom_toTopOf="@+id/line1"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/line1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/pretendard_regular"
                android:text="2025.02.21"
                android:textColor="#5A5A5A"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cafe_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendard_semibold"
                android:text="컴포즈커피 춘천점"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="@+id/date"
                app:layout_constraintTop_toBottomOf="@+id/date" />

            <TextView
                android:id="@+id/cafe_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/pretendard_regular"
                android:text="강원도 춘천시 충열로 1-16 1층"
                android:textColor="#565656"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/cafe_name"
                app:layout_constraintTop_toBottomOf="@+id/cafe_name" />

            <TextView
                android:id="@+id/content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/rounded_stroke_background"
                android:fontFamily="@font/pretendard_regular"
                android:padding="15dp"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/photo_rcv"
                tools:text="@string/lorem" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/photo_rcv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/rating"
                tools:itemCount="5"
                tools:listitem="@layout/add_photo_item">

            </androidx.recyclerview.widget.RecyclerView>

            <Button
                android:id="@+id/modify_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:background="@drawable/green_stroke_button"
                android:fontFamily="@font/pretendard_bold"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:paddingEnd="15dp"
                android:paddingBottom="5dp"
                android:text="@string/complete"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/cancel_button"
                app:layout_constraintTop_toTopOf="@id/cancel_button" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/gray_button"
                android:fontFamily="@font/pretendard_bold"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:paddingEnd="15dp"
                android:paddingBottom="5dp"
                android:text="@string/cancel"
                android:textColor="@color/gs_4"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/content"
                app:layout_constraintTop_toBottomOf="@+id/content" />

            <LinearLayout
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@id/cafe_name"
                app:layout_constraintTop_toBottomOf="@id/cafe_address">

                <ImageView
                    android:id="@+id/star1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/vacant_star" />

                <ImageView
                    android:id="@+id/star2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/vacant_star" />

                <ImageView
                    android:id="@+id/star3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/vacant_star" />

                <ImageView
                    android:id="@+id/star4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/vacant_star" />

                <ImageView
                    android:id="@+id/star5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/vacant_star" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>